tools/php-ffmpeg-ext/ffmpeg/tests/getFrameRate.out
Fatal error: Class 'ffmpeg_movie' not found in /var/www/html/dandan/tools/php-ffmpeg-ext/ffmpeg/tests/getFrameRate.php on line 2